change blog name

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Nasib's notes # blog_name will be displayed in your blog page
+blog_name: nnnotes # blog_name will be displayed in your blog page
 blog_nav_title: notes # your blog must have a title for it to be displayed in the nav bar
 blog_description: a collection on notes on topics I studied or opinions I decided to voice
 permalink: /blog/:year/:title/
