--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ github_username: nanaimi # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: NasibNaimi # your Twitter handle
 linkedin_username: nasibnaimi # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
+scholar_userid: eroGkvsAAAAJ # your Google Scholar ID
+orcid_id: 0000-0002-6245-7132 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -73,7 +73,7 @@ dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Best way to reach me is via email.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
