--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 blog_name: notes # blog_name will be displayed in your blog page
 blog_nav_title: notes # your blog must have a title for it to be displayed in the nav bar
 blog_description: a collection of notes and opinions
-permalink: /notes/:year/:title/
+permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
