add jekyll-sitemap plugin

--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,7 @@ plugins:
   - jekyll-target-blank
   - jekyll-twitter-plugin
   - jekyll-seo-tag
+  - jekyll-sitemap
   - jemoji
 
 # Sitemap settings
