--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: A.
 last_name: Naimi
 email: nasib.n@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Nasib's personal website where he shares some lame things with the outside world.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
