--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ last_name: Naimi
 email: nasib.n@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Nasib's personal website where he shares some lame things with the outside world.
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+# Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+footer_text: >  
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: Nasib, Naimi, machine learning, reinforcement learning, signal processing, information theory, autonomous robots, computer vision, eth zurich  # add your own keywords or leave empty
