--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,6 +2,7 @@ github_users:
   - nanaimi
 
 github_repos:
-  - thobauma/aadefdino
+  - nanaimi/aadefdino
   - nanaimi/holedet
   - nanaimi/real-lsd
+  - nanaimi/eth-summaries
