--- a/_config.yml
+++ b/_config.yml
@@ -189,7 +189,7 @@ defaults:
   - scope:
       path: "assets/**/*.*"
     values:
-      sitemap: false
+      sitemap: true 
 
 # -----------------------------------------------------------------------------
 # Jekyll Minifier
