--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,6 @@ plugins:
   - jekyll-target-blank
   - jekyll-twitter-plugin
   - jekyll-seo-tag
-  - jekyll-sitemap
   - jemoji
 
 # Sitemap settings
@@ -188,7 +187,7 @@ defaults:
   - scope:
       path: "assets/**/*.*"
     values:
-      sitemap: false 
+      sitemap: true
 
 # -----------------------------------------------------------------------------
 # Jekyll Minifier
