--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,11 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  recipes:
+    output: true
+    permalink: /recipes/:path/
+    defaults:
+      layout: post
 
 news_scrollable: false # adds a vertical scroll bar if there are more than 3 news items
 news_limit: 3 # leave blank to include all the news in the `_news` folder
